# Design-of-Embedded-Systems

./: .gitignore  LICENSE
ex01/: Makefile  ex01b.c
ex02/: Makefile  ex02.tex  ex02a.c  ex02b.c  ex02c.c  ex02d.c
ex03/: Makefile  ex03.tex  ex03b.c  ex03c.c
ex04/: Makefile  ex04.tex  ex04c.c  ex04d.c
ex05/: ex05.tex  ex05a.c  ex05b.c  ex05c.c
ex06/: Makefile  ex06.c  ex06.tex  ex06b.c
ex07/: ex07.tex  ex07a.c  ex07b.c  ex07c.c
ex08/: Makefile  ex08.tex  ex08a.c  ex08b1.c  ex08b2.c
ex09/: Makefile  Xenomai.dcl  Xenomai.icl  ex09.dcl  ex09.icl  ex09.tex  xenomai.c
ex10/: CMakeLists.txt  Makefile.inc  app.cfg  app.cpp  app.hpp  arbitrator.cpp  arbitrator.hpp  robot_action.hpp  sensors.hpp  shared_memory.hpp
ex10_brigel/: app.cfg  app.cpp  app.h
ex11/: app.cfg  app.cpp  app.hpp
ex11_b/: CMakeLists.txt  app.cpp  app.h
ex12/: GameGenerator.xtend  RulesDSL.xtext  RulesDSLGenerator.xtend  RulesDSLValidator.xtend  RulesGenerator.xtend  model1.golr  report.tex
ex12_b/: RulesDSL.xtext  RulesDSLGenerator.xtend  RulesDSLValidator.xtend  RulesOfLifeGenerator.xtend  spec1.tdsl
ex13/: CppGenerator.xtend  Dsl.xtext  DslGenerator.xtend  spec1.ev3
ex13_b/: MissionGenerator.xtend  TaskDSL.xtext  TaskDSLGenerator.xtend  spec1.tdsl
mars_rover/: report.tex
mars_rover/project/: CppGenerator.xtend  Dsl.xtext  DslGenerator.xtend  DslValidator.xtend  MarsDSLValidator.xtend  app.cfg  app.hpp  spec1.ev3
mars_rover/slave/: Makefile.inc  app.cfg  app.cpp  app.h
mars_rover/week1/: requirements.tex
